Color_game_v2/build_win/logs/build_log_10-Sun-05_23-48.log
======================================== 
===== Build started at 23:48:35.75 ===== 
======================================== 
 
[23:48:35.76] +++++ Compiling Project +++++ 
 
In file included from ..\game.cpp:12:
..\tilemap.h: In function 'void DrawTile(Tileset, Vector3, int, int)':
..\tilemap.h:30:21: error: 'shaders' was not declared in this scope
     ShaderSetVector(shaders, "bot_left_uv", Vector2{0.0f, 0.0f});
                     ^~~~~~~
..\tilemap.h:30:21: note: suggested alternative: 'ShaderUse'
     ShaderSetVector(shaders, "bot_left_uv", Vector2{0.0f, 0.0f});
                     ^~~~~~~
                     ShaderUse
..\tilemap.h:34:5: error: 'tile_default_transform' was not declared in this scope
     tile_default_transform.position = Vector3{world_position.x, world_position.y, world_position.z};
     ^~~~~~~~~~~~~~~~~~~~~~
 
=======================================
===== Build failed at 23:48:36.22 =====
=======================================
